defaults/data/full-view.css
article.entry.full > .headline-container {
    display: none;
}

article.full {
    margin: 10px 0;
}

.full-container {
    display: flex;
    flex: 0 1 700px;
    flex-direction: column;
    min-width: -moz-min-content;
    transition: border-color 200ms;
}

.full-container-inner {
    display: flex;
    flex-direction: column;
    align-self: stretch;
    border: 1px solid #abbfc9;
    padding-left: 1px;
    background: linear-gradient(to bottom, rgba(229, 244, 255, 1), rgba(229, 244, 255, 0) 35px);
    background-clip: padding-box;
}

article.selected > .full-container > .full-container-inner {
    border-left: 2px solid #3e8fb7;
    padding-left: 0;
}

article.read > .full-container > .full-container-inner {
    background: none;
}

article.read .title-link {
    color: #404040;
}


/* ----------------------  Article header  ---------------------- */

.header {
    display: flex;
    margin-bottom: 5px;
    padding: 7px 5px 0 25px;
}

.title-link {
    flex: 1 1 auto;
    color: #475059;
    font-family: Arial, sans-serif;
    font-size: 16px;
    font-weight: bold;
    text-decoration: none;
    transition: border-color 170ms;
}

.title-link:hover {
    text-decoration: underline;
}

.controls {
    flex: 0 0 auto;
    margin: -2px 0 0 5px;
}


/* ----------------------  Article subheader  ---------------------- */

.subheader, .subheader-left, .subheader-right,
.feed-name, .tags, .date, .updated-label, .authors {
    display: flex;
}

.subheader {
    margin: 5px 10px 5px 25px;
    font-size: 13px;
    font-family: Arial, sans-serif;
    line-height: 17px; /* Make the height the same for both Lucida and Verdana */
    color: #7c7c7c;
}

.subheader-left {
    flex-direction: column;
    flex-grow: 1;
    justify-content: flex-start;
}

.subheader-right {
    flex-grow: 1;
    justify-content: flex-end;
}

.authors:not(:empty):after {
    content: " •";
    margin: 0 4px;
}

body:not(.multiple-feeds) .feed-name {
    display: none;
}

.tags {
    padding-left: 20px;
    background: url(chrome://brief/skin/icons/tag.png) 1px no-repeat;
}

.tags:not(:empty) {
    margin-top: 2px;
}

.updated-label {
    margin-left: 5px;
    color: #de5b00;
}

article:not(.updated) .updated-label {
    display: none;
}

